--- a/index.html
+++ b/index.html
@@ -98,20 +98,15 @@
 
     // attempt to fetch external JSON (kpop_songs.json)
     fetch("kpop_songs.json")
-      .then(r => { if (!r.ok) throw new Error("Nenalezen kpop_songs.json"); return r.json(); })
-      .then(arr => {
-        if (Array.isArray(arr) && arr.length > 0) {
-          // merge: external first, then built-ins
-          songs = arr.concat(songs);
-          buildMapFromArray(songs);
-          renderCalendar(viewDate);
-        }
-      })
-      .catch(err => {
-        // console.log("External JSON not loaded:", err.message);
-        buildMapFromArray(songs);
-        renderCalendar(viewDate);
-      });
+  .then(response => {
+    if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+    return response.json();
+  })
+  .then(data => {
+    console.log("Načtená data:", data);
+  })
+  .catch(e => console.error("Fetch error:", e));
+
 
     const mdMap = new Map();
     function buildMapFromArray(arr){
