--- a/index.html
+++ b/index.html
@@ -97,29 +97,21 @@
     ];
 
     // attempt to fetch external JSON (kpop_songs.json)
-    fetch("kpop_songs.json")
-  .then(response => {
-    if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-    return response.json();
-  })
-  .then(data => {
-    console.log("Načtená data:", data);
-  })
-  .catch(e => console.error("Fetch error:", e));
-
-
-    const mdMap = new Map();
-    function buildMapFromArray(arr){
-      mdMap.clear();
-      for (const s of arr){
-        if (!s.release_date) continue;
-        const [y,m,d] = s.release_date.split("-").map(Number);
-        if (!m || !d) continue;
-        const key = `${m}-${d}`;
-        if (!mdMap.has(key)) mdMap.set(key, []);
-        mdMap.get(key).push(s);
-      }
-    }
+     fetch("kpop_songs.json")
+      .then(r => { if (!r.ok) throw new Error("Nenalezen kpop_songs.json"); return r.json(); })
+      .then(arr => {
+        if (Array.isArray(arr) && arr.length > 0) {
+          // merge: external first, then built-ins
+          songs = arr.concat(songs);
+          buildMapFromArray(songs);
+          renderCalendar(viewDate);
+        }
+      })
+      .catch(err => {
+        // console.log("External JSON not loaded:", err.message);
+        buildMapFromArray(songs);
+        renderCalendar(viewDate);
+      });
 
     // state & UI refs
     let viewDate = new Date();
