--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     ];
 
     // attempt to fetch external JSON (kpop_songs.json)
-     fetch("kpop_songs.json")
+    fetch("kpop_songs.json")
       .then(r => { if (!r.ok) throw new Error("Nenalezen kpop_songs.json"); return r.json(); })
       .then(arr => {
         if (Array.isArray(arr) && arr.length > 0) {
@@ -112,6 +112,19 @@
         buildMapFromArray(songs);
         renderCalendar(viewDate);
       });
+
+    const mdMap = new Map();
+    function buildMapFromArray(arr){
+      mdMap.clear();
+      for (const s of arr){
+        if (!s.release_date) continue;
+        const [y,m,d] = s.release_date.split("-").map(Number);
+        if (!m || !d) continue;
+        const key = `${m}-${d}`;
+        if (!mdMap.has(key)) mdMap.set(key, []);
+        mdMap.get(key).push(s);
+      }
+    }
 
     // state & UI refs
     let viewDate = new Date();
