--- a/index.html
+++ b/index.html
@@ -295,6 +295,17 @@
       { title: "Bad Girl Good Girl", artist: "Miss A", release_date: "2010-06-30", generation: 2 },
       { title: "Nobody (2011 re-release)", artist: "Wonder Girls", release_date: "2011-11-07", generation: 2 },
       { title: "I Am The Best", artist: "2NE1", release_date: "2011-06-24", generation: 2 }
+      { date: "2011-11-07", title: "G.N.O.", artist: "Wonder Girls", generation: 2, link: "https://youtu.be/ttJpY9pmSO8" },
+      { date: "2009-07-01", title: "Gee", artist: "Girls' Generation", generation: 2, link: "https://youtu.be/U7mPqycQ0tQ" },
+      { date: "2015-11-03", title: "Like OOH-AHH", artist: "TWICE", generation: 3, link: "https://youtu.be/0rtV5esQT6I" },
+      { date: "2020-08-03", title: "Dumhdurum", artist: "Apink", generation: 3, link: "https://youtu.be/gU2HZqS0jzI" },
+      { date: "1998-01-01", title: "To My Boyfriend", artist: "Fin.K.L", generation: 1, link: "https://youtu.be/rNj-jnbB2bQ" },
+      { date: "2018-08-06", title: "IDOL", artist: "BTS", generation: 3, link: "https://youtu.be/pBuZEGYXA6E" },
+      { date: "2021-12-17", title: "Eleven", artist: "IVE", generation: 4, link: "https://youtu.be/--FmExEAsM8" },
+      { date: "2016-10-30", title: "TT", artist: "TWICE", generation: 3, link: "https://youtu.be/ePpPVE-GGJw" },
+      { date: "2010-02-18", title: "Oh!", artist: "Girls' Generation", generation: 2, link: "https://youtu.be/Tk6m6h7dH_Y" },
+      { date: "2012-06-28", title: "Electric Shock", artist: "f(x)", generation: 2, link: "https://youtu.be/n8I8QGFA1oM" }
+];
     ];
 
     /* Utility: parse date string YYYY-MM-DD safely */
