--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       /* 4. generace */
       { title:"Ddu-Du Ddu-Du", artist:"BLACKPINK", release_date:"2018-06-15", generation:4, youtube:"https://youtu.be/IHNzOHi8sJs" },
       { title:"Attention", artist:"NewJeans", release_date:"2022-07-22", generation:4, youtube:"https://youtu.be/MvZ5b3D3q2o" },
-      { title:"IDOL", artist:"BTS", release_date:"2018-08-24", generation:4, youtube:"https://youtu.be=pBuZEGYXA6E" },
+      { title:"IDOL", artist:"BTS", release_date:"2018-08-24", generation:4, youtube:"https://youtu.be/pBuZEGYXA6E?si=uLHTM0pVAY9taXPP" },
       { title:"Eleven", artist:"IVE", release_date:"2021-12-01", generation:4, youtube:"https://youtu.be/--FmExEAsM8" },
       { title:"Tomboy", artist:"(G)I-DLE", release_date:"2022-03-14", generation:4, youtube:"https://youtu.be/AMd3LwH4Z0A" },
 
